<resources>
    <string name="app_name">BART Buddy</string>

    <!-- Generic -->
    <string name="home">Home</string>
    <string name="departing">Departing at %s</string>
    <string name="arriving">Arriving by %s</string>
    <string name="fare_info">Fare: $%1$s, Clipper: $%2$s</string>
    <string name="expand_route">Expand route</string>
    <string name="minutes">minutes</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_estimates">No estimates to display</string>
    <string name="turn_on_location">Location needs to be enabled before finding the nearest station!</string>

    <!-- Pliz rate dialog -->
    <string name="can_has_rating">Looks like you\'re a frequent user of this application. I\'d really appreciate it if you rate this app in the Play Store!</string>
    <string name="yes">Sure!</string>
    <string name="no">I\'ll pass</string>
    <string name="play_store_error">Unable to open the Play Store.</string>

    <!-- Stations Grid -->
    <string name="stn_origin">Origin</string>
    <string name="stn_dest">Dest.</string>
    <string name="stn_from">From: %s</string>
    <string name="stn_to">To: %s</string>
    <string name="stn_filter_hint">Enter in a station name</string>

    <!-- Notification Timer -->
    <string name="notif_blurb_format">This train from %1$s to %2$s is leaving in around %3$s. Alert me in: </string>
    <string name="notif_title_format">%1$s to %2$s leaving in:</string>
    <string name="train_leaving">Your train is leaving!</string>
    <string name="close">Tap here to close</string>
    <string name="imageview_desc">App icon</string>

    <!-- BSA Pop up Window -->
    <string name="see_all">See all announcements</string>
    <string name="mute_notif">Mute for today</string>
    <string name="failed_announcement_req">Failed to retrieve announcements.</string>

    <!-- User route footer -->
    <string name="leaving_in">"Leaving in: "</string>
    <string name="include_return_route">Include return route</string>
    <string name="update">Update</string>

    <!-- Onboarding Activity -->
    <string name="enter_bart_data">Select an origin station and a destination station:</string>
    <string name="done">Done</string>
    <string name="failed_stations_req">Failed to retrieve stations. Please try again later.</string>

    <!-- Trips Fragment -->
    <string name="updated_data">Updated your route.</string>
    <string name="no_etds">No etds for this station.</string>
    <string name="failed_to_load_trip">Failed to load trips for %1$s to %2$s</string>
    <string name="orig_to_dest">%1$s to %2$s</string>
    <string name="origin">From\u0020</string>
    <string name="destination">To\u0020</string>
    <string name="r_u_stupid">You don\'t need a timer for a leaving train.</string>
    <string name="starting_timer">Timer started.</string>
    <string name="too_late">The train probably left already.</string>
    <string name="departures_title_format">From %1$s to %2$s</string>
    <string name="departures_departure_format">Train from %1$s to %2$s %3$s</string>

    <!-- Timer dialog -->
    <string name="timer_notif_title">Set an alarm</string>
    <string name="zero">0</string>
    <string name="longer_time_please">Please enter in a longer timer duration</string>
    <string name="info_blurb">Train leaves in around %s</string>

    <string name="failed_to_get_bsa">Unable to fetch bsa\'s. Please try again later.</string>

    <string name="my_stations_blurb">You can view and edit information about the stations you\'re tracking here.</string>
    <string name="save">Save</string>

    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="action_notifications">Notifications</string>
    <string name="share">Share</string>

    <string name="deleting_data">Deleting Data</string>
    <string name="sure_to_delete">Are you sure you want to delete this?</string>

    <!-- SelectStationActivity -->
    <string name="select_origin">Select an origin station</string>
    <string name="select_dest">Select a destination station</string>
    <string name="going_in_a_loop">You can\'t be leaving and going to the same station.</string>

    <!-- MapActivity -->
    <string name="bart_map">BART Map</string>

    <!-- StationInfoLayout -->
    <string name="stn_info_title">Info for %s station</string>
    <string name="whats_nearby">Looking for something to do nearby?</string>
    <string name="failed_station_info_req">Failed to retrieve station information. Please try again later.</string>

    <!-- Trip Activity -->
    <string name="trip_title">Trip for %1$s to %2$s</string>
    <string name="trip_string_format">Here\'s how to go from %1$s to %2$s
        \nDepart: %3$s
        \nArrive: %4$s\n\n
    </string>
    <string name="trip_leg_format">%1$d. From %2$s, take train to %3$s leaving at %4$s. Get off at %5$s.</string>

    <!-- Leg List Element -->
    <string name="train_info">From %1$s, take train to %2$s leaving at %3$s</string>
    <string name="stop_info">Get off at %1$s at %2$s</string>
    <string name="next_train_estimates">The next train(s) in this direction leave in:</string>

    <!-- Trip Adapter -->
    <string name="departures_failed">Failed to fetch departures</string>
    <string name="next_train_blurb">The next train(s) %sfor this route leaves in:</string>
</resources>
