<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_route_footer"
    android:background="@color/white"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <TextView
                style="@style/BlackTextBase"
                android:id="@+id/from"
                android:layout_marginLeft="8dp"
                android:text="@string/origin"
                android:textSize="18sp" />

            <LinearLayout
                style="@style/UserRouteWrapperTheme"
                android:id="@+id/origin_wrapper"
                android:layout_toRightOf="@+id/from">

                <TextView
                    style="@style/UserRouteInputTextTheme"
                    android:id="@+id/user_route_origin"
                    android:text=" " />

                <com.joanzapata.iconify.widget.IconTextView
                    style="@style/UserRouteEditIconTheme" />

            </LinearLayout>

            <com.joanzapata.iconify.widget.IconTextView
                style="@style/BlackTextBase"
                android:id="@+id/user_route_swap"
                android:layout_toRightOf="@+id/origin_wrapper"
                android:padding="8dp"
                android:text="@string/ion_arrow_swap"/>

            <TextView
                style="@style/BlackTextBase"
                android:id="@+id/to"
                android:layout_toRightOf="@+id/user_route_swap"
                android:text="@string/destination"
                android:textSize="18sp" />

            <LinearLayout
                style="@style/UserRouteWrapperTheme"
                android:layout_toRightOf="@+id/to">

                <TextView
                    style="@style/UserRouteInputTextTheme"
                    android:id="@+id/user_route_dest"
                    android:text=" " />

                <com.joanzapata.iconify.widget.IconTextView
                    style="@style/UserRouteEditIconTheme" />

            </LinearLayout>

            <com.joanzapata.iconify.widget.IconTextView
                style="@style/BlackTextBase"
                android:id="@+id/user_route_expand"
                android:layout_alignParentRight="true"
                android:padding="8dp"
                android:text="@string/ion_arrow_up_b"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/user_route_expansion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/BlackTextBase"
                    android:layout_gravity="start"
                    android:text="@string/leaving_in"
                    android:textSize="18sp"/>

                <EditText
                    style="@style/UserRouteInputTextTheme"
                    android:id="@+id/user_route_minutes"
                    android:background="@drawable/black_rectangular_border"
                    android:cursorVisible="false"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:layout_width="35dp"
                    android:maxLength="2"
                    android:maxLines="1" />

            </LinearLayout>

            <CheckBox
                style="@style/BlackTextBase"
                android:id="@+id/include_destination"
                android:layout_gravity="end"
                android:text="@string/include_return_route"
                android:textSize="18sp" />

            <Button
                android:id="@+id/user_route_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/update"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>